# vision_bot

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/vision_bot/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart  projects.dart  robot.dart
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  image_proc.rs  lib.rs
test/: widget_test.dart
